--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,28 +1,58 @@
-/* src/styles/Sidebar.css */
 .sidebar {
-    width: 250px;
-    padding: 10px;
-    border-right: 1px solid var(--border-color);
-    height: 100vh;
-    position: fixed;
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
-  }
-  
-  .sidebar h2 {
-    margin: 0;
-    padding-bottom: 10px;
-    color: black;
-  }
-  .sidebar h5 {
-    color: black;
-  }
-  
-  .task {
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid var(--border-color);
-    border-radius: 5px;
-    background-color: var(--secondary-color);
-  }
-  
+  width: 250px;
+  padding: 10px;
+  border-right: 1px solid var(--border-color);
+  height: 100vh;
+  position: fixed;
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+}
+
+.sidebar h2 {
+  margin: 0;
+  padding-bottom: 10px;
+  color: black;
+}
+
+.sidebar h5 {
+  color: black;
+}
+
+.list-group-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
+  margin-bottom: 10px;
+  background-color: var(--secondary-color);
+  color: black;
+}
+
+.task-info {
+  display: flex;
+  align-items: center;
+}
+
+.task-icon {
+  font-size: 24px;
+  margin-right: 10px;
+}
+
+.task-name {
+  font-size: 16px;
+}
+
+.badge-primary {
+  background-color: #007bff;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 12px;
+  font-size: 14px;
+}
+
+.task-score {
+  margin-left: auto;
+  display: inline-block;
+}
