--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -28,6 +28,15 @@
   margin-bottom: 10px;
   background-color: var(--secondary-color);
   color: black;
+  cursor: pointer;
+  transition: transform 0.3s, background-color 0.3s, color 0.3s, box-shadow 0.3s;
+}
+
+.list-group-item:hover {
+  background-color: var(--primary-color);
+  color: white;
+  box-shadow: 5px 5px 5px 0px lightgray;
+  transform: scale(1.05);
 }
 
 .task-info {
