--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,4 +2,31 @@
 .home {
     padding: 20px;
   }
+  .progress-overview .progress-bar {
+    background-color: #f3f3f3;
+    border-radius: 5px;
+    overflow: hidden;
+    height: 30px;
+  }
+  
+  .progress-bar .progress {
+    background-color: #4caf50;
+    color: white;
+    height: 100%;
+    text-align: center;
+  }
+  
+  .recent-achievements ul,
+  .top-security-tasks ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .recent-achievements li,
+  .top-security-tasks li {
+    background-color: #e0e0e0;
+    margin-bottom: 8px;
+    padding: 10px;
+    border-radius: 4px;
+  }
   
